@@ -151,6 +151,11 @@ wxGTK:
   --enable-gstreamer8 to force configure to check for GStreamer 0.8.\
 - Fixed problem with choice editor in wxGrid whereby the editor
   lost focus when the combobox menu was shown.
+- Fixed focusing with mnemonic accelerator keys on wxStaticText which
+  is now able to focus on wxComboBox and possibly other controls
+  previously unable to be focused upon before
+- Enabled mnemonics and the corresponding accelerator keys for 
+  wxStaticBox and wxRadioBox
 - Fixed problem trying to print from a preview, whereby wrong printer
   class was used.
 - Worked around pango crashes in strncmp on Solaris 10.
